--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -2,6 +2,12 @@ html {
   font-size: 14px;
 }
 
+:root {
+  --border-color_default: #383838;
+  --background-card: hsla(240, 1%, 17%, 0.75);
+}
+
+
 body {
   background: #2d2c3e;
   color: white;
@@ -21,8 +27,47 @@ body {
   margin-inline: auto;
   justify-content: center;
   align-items: stretch;
+  margin-top: 40px;
   max-width: 1200px;
   gap: 25px;
+}
+
+@media (max-width: 796px) {
+  .element-center {
+    display: flex;
+    margin-inline: auto;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+    max-width: 1200px;
+    gap: 25px;
+    flex-direction: column;
+  }
+
+
+}
+
+.info-card
+{
+  width: 100%;
+  height: 100%;
+  padding: 40px;
+}
+
+.avatar-zone
+{
+  display: flex;
+  margin-inline: auto;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.avatar
+{
+  width: 170px;
+  min-width: 80px;
+  border-radius: 10px;
 }
 
 .user-card
@@ -31,8 +76,11 @@ body {
   top: 50px;
   height: 100%;
   margin-bottom: 0;
-  padding-top: 40px;
+  padding: 40px;
+  border-radius: 20px;
+  border: 2px solid;
   max-height: max-content;
+  border-color: var(--border-color_default);
   z-index: 1;
 }
 
@@ -41,21 +89,51 @@ body {
   min-width: 75%;
   width: 75%;
   margin: 0;
+  border-radius: 20px;
+  border: 2px solid;
+  border-color: var(--border-color_default)
 }
 
-.navbar-card {
+.navbar-card 
+{
+  font-size: 22px;
   position: relative;
   bottom: auto;
-  top: 0;
-  left: auto;
-  right: 0;
+  top: -1px;
+  right: 1px;
+  padding: 10px;
   width: max-content;
-  border-radius: 0 20px;
-  padding: 0 10px;
-  border-radius: 20px 20px 20px 20px;
-  border: 2px solid;
-  border-color: #8f9091;
+  border-radius: 20px 0px 20px 0px;
+  border-top: 0px;
+  border-left: 0px;
+  border-right: 2px solid;
+  border-bottom: 2px solid;
+  border-color: var(--border-color_default);
+  background-color: var(--background-card);
   box-shadow: none;
+}
+
+.navbar-list
+{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 0 10px;
+  margin-bottom: 0;
+  gap: 17px;
+}
+
+.nav-item
+{
+  display: list-item;
+  list-style: none;
+  text-align: center;
+}
+
+.nav-item:hover
+{
+  color: #b6b6b6;
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
