--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,8 +6,12 @@
     <title>@ViewData["Title"] - PortFolio</title>
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="https://use.hugeicons.com/font/icons.css" />
+    <script src="https://kit.fontawesome.com/18b65a3ec1.js" crossorigin="anonymous"></script><!--icon-->
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/about.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/resume.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PortFolio.styles.css" asp-append-version="true" />
 </head>
 <body>
@@ -18,9 +22,14 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <br/>
+
+    <footer class="border-top footer footer-text">
         <div class="container">
-            &copy; 2025 - PortFolio - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <p>
+                The frontend implementation was inspired by Abhinav Jaiswal <a href="https://iabhinav.me/" target="_blank">(https://iabhinav.me/).</a> 
+                Thanks to emmabostian for sharing a collection of developer portfolios that provided further inspiration. <a href="https://github.com/emmabostian/developer-portfolios" target="_blank">(https://github.com/emmabostian/developer-portfolios).</a>
+            </p>
         </div>
     </footer>
 
