--- a/Views/Shared/_Layout.cshtml.css
+++ b/Views/Shared/_Layout.cshtml.css
@@ -24,7 +24,7 @@ a {
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+  border-top: 1px solid #ffffff;
 }
 .border-bottom {
   border-bottom: 1px solid #e5e5e5;
@@ -41,6 +41,7 @@ button.accept-policy {
 
 .footer {
   position: absolute;
+  color: rgb(175, 175, 175);
   bottom: 0;
   width: 100%;
   white-space: nowrap;
