--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -4,7 +4,8 @@ html {
 
 :root {
   --border-color_default: #383838;
-  --background-card: hsla(240, 1%, 17%, 0.75);
+  --background-nav-card: hsla(240, 1%, 17%, 0.75);
+  --background-card: hsl(0, 0%, 13%);
 }
 
 
@@ -32,7 +33,138 @@ body {
   gap: 25px;
 }
 
-@media (max-width: 796px) {
+
+.info-card
+{
+  width: 100%;
+  height: 100%;
+  padding: 40px;
+}
+
+/* user-car_____________________________________________ */
+.user-card
+{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: sticky;
+  top: 50px;
+  margin-bottom: 0;
+  padding: 20px;
+  border-radius: 20px;
+  border: 2px solid;
+  max-height: max-content;
+  border-color: var(--border-color_default);
+  background-color: var(--background-card);  
+  z-index: 1;
+}
+
+.avatar-zone
+{
+  display: flex;
+  margin-inline: auto;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+}
+
+.avatar
+{
+  width: 170px;
+  min-width: 80px;
+  border-radius: 10px;
+}
+
+.name-prof
+{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 20px;
+}
+
+.name {font-family: "Times New Roman", Times, serif;}
+
+.profession
+{
+  font-family: "Lucida Console", "Courier New", monospace;
+  margin-bottom: 0;
+}
+
+.contact-zone
+{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.infocontact
+{
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  margin-bottom: 10px;
+}
+
+.contact-text
+{
+  margin-left: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+.icon-avatar
+{
+  font-size: 30px;
+}
+
+.label-contact
+{
+  margin: 0;
+  font-size: 70%;
+  color: rgb(129, 129, 129);
+}
+
+.label-contact-value
+{
+  margin: 0;
+  font-size: 80%;
+  text-decoration: none;
+  color: white;
+}
+
+.label-contact-value:hover
+{
+  margin: 0;
+  font-size: 80%;
+  text-decoration: none;
+  color: var(--border-color_default);
+}
+
+.lick-social
+{
+  display: flex;
+  width: 100%;
+  margin-top: 5px;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.social-link-icon
+{
+  color: white;
+  font-size: 30px;
+}
+
+.social-link-icon:hover
+{
+  color: var(--border-color_default);
+  font-size: 30px;
+}
+/* user-car_____________________________________________ */
+
+@media (max-width: 991px) {
   .element-center {
     display: flex;
     margin-inline: auto;
@@ -44,45 +176,16 @@ body {
     flex-direction: column;
   }
 
-
+  .avatar-zone {
+    display: flex;
+    margin-inline: auto;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+  }
 }
 
-.info-card
-{
-  width: 100%;
-  height: 100%;
-  padding: 40px;
-}
-
-.avatar-zone
-{
-  display: flex;
-  margin-inline: auto;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.avatar
-{
-  width: 170px;
-  min-width: 80px;
-  border-radius: 10px;
-}
-
-.user-card
-{
-  position: sticky;
-  top: 50px;
-  height: 100%;
-  margin-bottom: 0;
-  padding: 40px;
-  border-radius: 20px;
-  border: 2px solid;
-  max-height: max-content;
-  border-color: var(--border-color_default);
-  z-index: 1;
-}
+hr{ color: white; }
 
 .main-content 
 {
@@ -91,7 +194,8 @@ body {
   margin: 0;
   border-radius: 20px;
   border: 2px solid;
-  border-color: var(--border-color_default)
+  border-color: var(--border-color_default);
+  background-color: var(--background-card);  
 }
 
 .navbar-card 
@@ -109,7 +213,7 @@ body {
   border-right: 2px solid;
   border-bottom: 2px solid;
   border-color: var(--border-color_default);
-  background-color: var(--background-card);
+  background-color: var(--background-nav-card);
   box-shadow: none;
 }
 
@@ -134,6 +238,14 @@ body {
 .nav-item:hover
 {
   color: #b6b6b6;
+}
+
+.footer-text
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
