--- a/wwwroot/css/about.css
+++ b/wwwroot/css/about.css
@@ -30,7 +30,7 @@
     flex-direction: column;
     padding: 0%;
     margin: 5px;
-    width: 300px;
+    width: 70%;
     border-radius: 10px;
     /*background-color: white;*/
     box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.2);
