--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,8 +24,8 @@
     <br/>
     <br/>
     
-    <footer class="border-top footer footer-text">
-        <div class="container">
+    <footer class="footer-text-custom">
+        <div class="text-footer">
             <p>
                 The frontend implementation was inspired by Abhinav Jaiswal <a href="https://iabhinav.me/" target="_blank">(https://iabhinav.me/).</a> <br/>
                 Thanks to emmabostian for sharing a collection of developer portfolios that provided further inspiration. <a href="https://github.com/emmabostian/developer-portfolios" target="_blank">(https://github.com/emmabostian/developer-portfolios).</a>
