--- a/wwwroot/css/about.css
+++ b/wwwroot/css/about.css
@@ -2,6 +2,21 @@
   --background-card-project: hsl(0, 0%, 15%);
 }
 
+.sheet-about
+{
+    /*
+    scale: 1;
+    transition: scale .3s ease-in-out;
+    */
+  opacity: 1;
+  transition: opacity .3s ease-in-out;
+
+  @starting-style {
+    /* scale: 0; */
+    opacity: 0;
+  }
+}
+
 .section-project
 {
     display: flex;
