--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -303,6 +303,196 @@ body {
   }
 }
 
+/*chatbot _____________________________*/
+
+.chat-bot
+{
+  position: fixed;
+  background-color: #212121;
+  border-radius: 5px 5px 5px 5px;
+  font-size: 100%;
+  height: max-content;
+  right: 1%;
+  top: 60%;
+  z-index: 1;
+
+}
+
+.title-chat
+{
+  display: flex;
+  padding: 5px;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 5px 5px 0 0;
+  flex-direction: row;
+  background-color: #004b9b;
+}
+
+.show-buton
+{
+  background-color: transparent;
+  border: none;
+  color: white;
+  font-size: 100%;
+}
+
+.title-bot
+{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.chatting-order
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 85%;
+
+  scale: 1;
+  transition: scale .3s ease-in-out;
+
+  @starting-style {
+    scale: 0;
+  }
+}
+
+.chatting-order.hide
+{
+  scale: 0;
+  transition: scale .3s ease-in-out;
+
+  @starting-style {
+    scale: 1; 
+  }
+}
+
+#chat 
+{ 
+  width: 100%; 
+  height: 200px;
+  overflow-x: hidden;
+  border: 1px solid #383838;
+  background-color: #212121;
+  
+}
+/*chatbot____________________________________________*/
+#chat .item 
+{
+  display: flex;
+
+  margin: 10px 0;
+}
+
+#chat .item .icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #007bff;
+  font-size: 190%;
+  color: white;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  border-radius: 50%;
+}
+
+#chat .item .msg 
+{
+  background: #007bff;
+  padding: 5px;
+  word-wrap: break-word;   /* break long words */
+  overflow-wrap: break-word;
+  color: white;
+  border-radius: 10px;
+  max-width: 150px;
+  margin-left: 10px;
+}
+
+/*chatbot_end________________________________________*/
+
+/*chatuser____________________________________________*/
+
+#chat .item-right 
+{
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  justify-items: center;
+  width: 100%;
+}
+
+#chat .item-right .msg 
+{
+  margin-right: 3px;
+  padding: 5px;
+  border-radius: 10px;
+  max-width: 150px;
+  background: #efefef;
+  width: max-content;
+  word-wrap: break-word;   /* break long words */
+  overflow-wrap: break-word;
+  color: #333;
+}
+
+/*chatuser_end________________________________________*/
+
+.input-zone
+{
+  padding: 5px;
+  background: #7a7a7a;
+}
+
+.input-zone #input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid transparent;
+    border-radius: 3px;
+    outline: none;
+    padding-right: 70px;
+    font-family: 'Poppins', sans-serif;
+    transition: 0.3s all ease;
+}
+
+.input-zone #input:focus {
+    border-color: #007bff;
+}
+
+.input-zone button {
+    position: absolute;
+    top: 90%;
+    right: 10px;
+    transform: translateY(-50%);
+    background: transparent;
+    border: 1px solid #007bff;
+    padding: 5px 10px;
+    border-radius: 3px;
+    color: #007bff;
+    outline: none;
+    cursor: pointer;
+    opacity: 0;
+    pointer-events: none;
+    transition: 0.3s all ease;
+}
+
+.input-zone button:hover {
+    background: #007bff;
+    color: white;
+}
+
+.input-zone #input:valid ~ button {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+
+/*chatbot _____________________________*/
+
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
