--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -416,6 +416,29 @@ body {
 
 /*chatbot_end________________________________________*/
 
+/*typing animation____________________________________*/
+
+.msg.typing {
+    font-style: italic;
+    color: gray;
+}
+
+.msg.typing .dots::after {
+    content: '';
+    display: inline-block;
+    width: 1em;
+    text-align: left;
+    animation: ellipsis 1s infinite;
+}
+
+@keyframes ellipsis {
+    0% { content: ''; }
+    33% { content: '.'; }
+    66% { content: '..'; }
+    100% { content: '...'; }
+}
+/*typing animation_end________________________________*/
+
 /*chatuser____________________________________________*/
 
 #chat .item-right 
