--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -50,12 +50,12 @@ main
 .user-card
 {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   position: sticky;
   top: 50px;
   margin-bottom: 0;
-  padding: 20px;
+  padding: 10px;
   border-radius: 20px;
   border: 2px solid;
   max-height: max-content;
@@ -67,17 +67,22 @@ main
 .avatar-zone
 {
   display: flex;
-  margin-inline: auto;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+}
 
+.imagen-avatar
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
 }
 
 .avatar
 {
-  width: 170px;
-  min-width: 80px;
+  width: 70%;
   border-radius: 10px;
 }
 
@@ -87,14 +92,19 @@ main
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin: 20px;
+  margin: 10px;
 }
 
-.name {font-family: "Times New Roman", Times, serif;}
+.name 
+{
+  font-family: "Times New Roman", Times, serif;
+  font-size: 80%;
+}
 
 .profession
 {
   font-family: "Lucida Console", "Courier New", monospace;
+  font-size: 80%;
   margin-bottom: 0;
 }
 
@@ -102,12 +112,12 @@ main
 {
   display: flex;
   flex-direction: column;
-  width: 100%;
 }
 .infocontact
 {
   display: flex;
   align-items: center;
+  font-size: 80%;
   flex-direction: row;
   margin-bottom: 10px;
 }
@@ -150,28 +160,15 @@ main
 .lick-social
 {
   display: flex;
-  width: 100%;
   margin-top: 5px;
   flex-direction: row;
   justify-content: space-around;
 }
 
-@media (max-width: 600px){
-  .lick-social
-{
-  display: flex;
-  width: 100%;
-  margin-top: 5px;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  justify-content: space-around;
-}
-}
-
 .social-link-icon
 {
   color: white;
+  margin: 0 5px 0 5px;
   font-size: 30px;
 }
 
@@ -283,24 +280,47 @@ body {
     flex-direction: column;
   }
 
-  .main-content 
-  {
-    width: 90%;
-  }
-
   .user-card
   {
     width: 90%;
   }
 
-  .avatar-zone {
-    display: flex;
-    margin-inline: auto;
+  .imagen-avatar
+  {
     width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
+    height: 100%;
   }
+  .avatar
+  {
+    width: 80%;
+    height: 80%;
+  }
+
+  .main-content 
+  {
+    width: 90%;
+  }
+
+  .avatar-zone 
+  {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+  }
+
+  .lick-social
+  {
+    display: flex;
+    width: 100%;
+    margin-top: 5px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-around;
+}
 }
 
 /*chatbot _____________________________*/
