AI change button

--- a/Views/Portfolio/Portfolio.cshtml
+++ b/Views/Portfolio/Portfolio.cshtml
@@ -90,8 +90,8 @@
 
     <div id="chat-zone" class="chat-bot hide">
 
-        <div class="title-chat">
-            <button id="show-buton" class="show-buton" onclick="hidechat()"> <i class="hgi hgi-stroke hgi-arrow-up-01"></i> </button>
+        <div class="title-chat" onclick="hidechat()">
+            <button id="show-buton" class="show-buton"> <i class="hgi hgi-stroke hgi-arrow-up-01"></i> </button>
             <div class="title-bot">ChatBot GPT</div>
         </div>
         
