show by default IA

--- a/Views/Portfolio/Portfolio.cshtml
+++ b/Views/Portfolio/Portfolio.cshtml
@@ -88,13 +88,13 @@
         </div>
     </div>
 
-    <div id="chat-zone" class="chat-bot hide">
+    <div id="chat-zone" class="chat-bot">
 
         <div class="title-chat" onclick="hidechat()">
-            <button id="show-buton" class="show-buton"> <i class="hgi hgi-stroke hgi-arrow-up-01"></i> </button>
+            <button id="show-buton" class="show-buton"> <i class="hgi hgi-stroke hgi-arrow-down-01"></i> </button>
             <div class="title-bot">ChatBot GPT</div>
         </div>
-        
+        <partial name="./chatbot/chatbot"/>
 
         <script>
 
