--- a/Views/Portfolio/sheets/resume.cshtml
+++ b/Views/Portfolio/sheets/resume.cshtml
@@ -24,7 +24,7 @@
 
     <div class="work-time">
         <div class="title-work-time">
-            <h3><i class="hgi hgi-stroke hgi-graduation-scroll"></i> education</h3>
+            <h3><i class="hgi hgi-stroke hgi-graduation-scroll"></i> Education</h3>
         </div>
 
         <ol class="work-time-list">
