--- a/Views/Portfolio/Portfolio.cshtml
+++ b/Views/Portfolio/Portfolio.cshtml
@@ -92,7 +92,7 @@
 
         <div class="title-chat" onclick="hidechat()">
             <button id="show-buton" class="show-buton"> <i class="hgi hgi-stroke hgi-arrow-down-01"></i> </button>
-            <div class="title-bot">ChatBot GPT</div>
+            <div class="title-bot">Assistant (ChatBot GPT-5)</div>
         </div>
         <partial name="./chatbot/chatbot"/>
 
