--- a/Views/Portfolio/sheets/about.cshtml
+++ b/Views/Portfolio/sheets/about.cshtml
@@ -8,6 +8,13 @@
     </div>
 
     <br/>
+
+    <div class="Simple-resume">
+        <h2> <i class="hgi hgi-stroke hgi-star"></i> 20+ Projects</h2>
+        <h2> <i class="hgi hgi-stroke hgi-certificate-01"></i> 10+ Certificates</h2>
+    </div>
+
+    <br/>
     <br/>
     <div class="section-project">
         <div class="section-project-title">
